<resources>
    <string name="app_name">Kindergarten workbook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="positive">positive</string>
    <string name="negative">negative</string>
    <string name="middle_grade">middle grade</string>
    <string name="note">note</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="group">Group:</string>
</resources>