<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        tools:text="Full name" />

    <ImageButton
        android:id="@+id/btnPositiveGrade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:src="@drawable/plus_icon"
        android:contentDescription="@string/positive" />

    <ImageButton
        android:id="@+id/btnNegativeGrade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:src="@drawable/minus_icon"
        android:contentDescription="@string/negative" />

    <ImageButton
        android:id="@+id/btnMiddleGrade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:src="@drawable/plus_minus_icon"
        android:contentDescription="@string/middle_grade" />

    <ImageButton
        android:id="@+id/btnNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:src="@drawable/note"
        android:contentDescription="@string/note" />

</LinearLayout>